--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
   <div class="container">
     <header>
       <h1 class="title">Official MTNA Collegiate Membership Application Process</h1>
+        <a class="frosted-link" href="./MTNA Application Process.pdf" download="MTNA Application Process.pdf"
+                >
+                Save this page
+        </a>
       <!-- <p class="subtitle">MTNA 会员申请流程</p> -->
     </header>
 
